// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard page component renders correctly if game list is loading 1`] = `
.c0 {
  text-align: center;
  margin-top: 15px;
  margin-bottom: 15px;
}

.c0 img {
  border-radius: 15px;
}

.c0 #current-image {
  width: 100%;
  opacity: 0.7;
}

.c0 #previous-image,
.c0 #next-image {
  width: 90%;
  opacity: 0.2;
  margin: 50px 0;
  display: visible;
}

@media (max-width:1360px) {
  .c0 #current-image {
    height: 280px;
  }
}

@media (max-width:1130px) {
  .c0 #current-image {
    height: 260px;
  }
}

@media (max-width:900px) {
  .c0 #previous-image,
  .c0 #next-image {
    display: none;
  }
}

<div
  style={
    Object {
      "height": "100vh",
      "overflow": "auto",
      "paddingBottom": "20%",
    }
  }
>
  <div
    className="ant-row"
    style={
      Object {
        "marginLeft": -12,
        "marginRight": -12,
      }
    }
  >
    <div
      className="ant-col ant-col-22 ant-col-offset-1"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        Welcome to the Old School Game Library
      </h1>
      <div
        className="c0"
        id="animated-carousel"
      >
        <div
          className="ant-row"
        >
          <div
            className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-16 ant-col-sm-offset-4 ant-col-md-5 ant-col-md-offset-1 ant-col-lg-6 ant-col-lg-offset-1"
          >
            <img
              alt="Random Game"
              data-index={0}
              id="previous-image"
              src="/image/super-mario-kart.webp"
            />
          </div>
          <div
            className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-16 ant-col-sm-offset-4 ant-col-md-11 ant-col-md-offset-1 ant-col-lg-9 ant-col-lg-offset-1"
          >
            <img
              alt="Random Game"
              data-index={1}
              id="current-image"
              src="/image/super-mario-world.webp"
            />
          </div>
          <div
            className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-16 ant-col-sm-offset-4 ant-col-md-5 ant-col-md-offset-1 ant-col-lg-6 ant-col-lg-offset-1"
          >
            <img
              alt="Random Game"
              data-index={2}
              id="next-image"
              src="/image/top-gear.webp"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-row"
  >
    <div
      className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-22 ant-col-sm-offset-1 ant-col-md-10 ant-col-md-offset-1 ant-col-lg-9 ant-col-lg-offset-1"
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/library"
          onClick={[Function]}
        >
          Library
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h1
          className="text-center"
        >
          <div
            className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
            style={
              Object {
                "marginTop": "2vh",
              }
            }
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
            </span>
            <div
              className="ant-spin-text"
            >
              Loading, please wait...
            </div>
          </div>
        </h1>
      </div>
    </div>
    <div
      className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-22 ant-col-sm-offset-1 ant-col-md-10 ant-col-md-offset-1 ant-col-lg-9 ant-col-lg-offset-1"
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/favs"
          onClick={[Function]}
        >
          Your Favs
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h1
          className="text-center"
        >
          <div
            className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
            style={
              Object {
                "marginTop": "2vh",
              }
            }
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
              <i
                className="ant-spin-dot-item"
              />
            </span>
            <div
              className="ant-spin-text"
            >
              Loading, please wait...
            </div>
          </div>
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard page component renders correctly if has finished loading 1`] = `
.c0 {
  text-align: center;
  margin-top: 15px;
  margin-bottom: 15px;
}

.c0 img {
  border-radius: 15px;
}

.c0 #current-image {
  width: 100%;
  opacity: 0.7;
}

.c0 #previous-image,
.c0 #next-image {
  width: 90%;
  opacity: 0.2;
  margin: 50px 0;
  display: visible;
}

@media (max-width:1360px) {
  .c0 #current-image {
    height: 280px;
  }
}

@media (max-width:1130px) {
  .c0 #current-image {
    height: 260px;
  }
}

@media (max-width:900px) {
  .c0 #previous-image,
  .c0 #next-image {
    display: none;
  }
}

<div
  style={
    Object {
      "height": "100vh",
      "overflow": "auto",
      "paddingBottom": "20%",
    }
  }
>
  <div
    className="ant-row"
    style={
      Object {
        "marginLeft": -12,
        "marginRight": -12,
      }
    }
  >
    <div
      className="ant-col ant-col-22 ant-col-offset-1"
      style={
        Object {
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        Welcome to the Old School Game Library
      </h1>
      <div
        className="c0"
        id="animated-carousel"
      >
        <div
          className="ant-row"
        >
          <div
            className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-16 ant-col-sm-offset-4 ant-col-md-5 ant-col-md-offset-1 ant-col-lg-6 ant-col-lg-offset-1"
          >
            <img
              alt="Random Game"
              data-index={0}
              id="previous-image"
              src="/image/super-mario-kart.webp"
            />
          </div>
          <div
            className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-16 ant-col-sm-offset-4 ant-col-md-11 ant-col-md-offset-1 ant-col-lg-9 ant-col-lg-offset-1"
          >
            <img
              alt="Random Game"
              data-index={1}
              id="current-image"
              src="/image/super-mario-world.webp"
            />
          </div>
          <div
            className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-16 ant-col-sm-offset-4 ant-col-md-5 ant-col-md-offset-1 ant-col-lg-6 ant-col-lg-offset-1"
          >
            <img
              alt="Random Game"
              data-index={2}
              id="next-image"
              src="/image/top-gear.webp"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-row"
  >
    <div
      className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-22 ant-col-sm-offset-1 ant-col-md-10 ant-col-md-offset-1 ant-col-lg-9 ant-col-lg-offset-1"
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/library"
          onClick={[Function]}
        >
          Library
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h3
          className="text-primary"
        >
          Total: 
          2000
        </h3>
        <h3
          className="text-primary"
        >
          SNES
          : 
          1000
        </h3>
        <h3
          className="text-primary"
        >
          PSX
          : 
          1000
        </h3>
      </div>
    </div>
    <div
      className="ant-col ant-col-xs-22 ant-col-xs-offset-1 ant-col-sm-22 ant-col-sm-offset-1 ant-col-md-10 ant-col-md-offset-1 ant-col-lg-9 ant-col-lg-offset-1"
    >
      <h1
        className="text-center text-primary text-big"
        style={
          Object {
            "marginTop": "2vh",
          }
        }
      >
        <a
          href="/favs"
          onClick={[Function]}
        >
          Your Favs
        </a>
      </h1>
      <div
        className="clean-card"
        style={
          Object {
            "padding": "15px",
          }
        }
      >
        <h3
          className="text-primary"
        >
          Total: 
          1500
        </h3>
        <h3
          className="text-primary"
        >
          SNES
          : 
          500
        </h3>
        <h3
          className="text-primary"
        >
          PSX
          : 
          1000
        </h3>
      </div>
    </div>
  </div>
</div>
`;
